--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/ticket.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/ticket.html
@@ -8,7 +8,7 @@
 {% endblock head %}
 
 {% block body %}
-
+{{raisedTicket}}
    <form id="live_form">
        {% csrf_token %}
     <div class="form-group">
