--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/index.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/index.html
@@ -10,6 +10,7 @@
         Asset Management
     </h2>
 </div>
+
 {% for i in assets %}
 <div class="card" style="width: 18rem; margin:5%">
     <div class="card-body">
@@ -19,12 +20,13 @@
     </div>
     <div class="card-footer">
       {% if i.id in ids %}
-      <a type="button" class="btn btn-danger" href="{% url 'raise-ticket' i.id %}"  id="{{i.id}}">Track</a>
+        <a type="button" class="btn btn-danger" href="{% url 'track-ticket' i.id %}"  id="{{i.id}}">Track</a>
       {% else %}
         <a type="button" class="btn btn-info" href="{% url 'raise-ticket' i.id %}"  id="{{i.id}}">Raise A ticket</a>
       {% endif %}
     </div>
-  </div>
+</div>
+
 {% endfor %}
 
 {% endblock body %}
