--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/track-ticket.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/track-ticket.html
@@ -1,5 +1,8 @@
 {% extends 'home/base.html' %}
 {% block head %}
+<title>
+  Track Ticket
+</title>
         <style>
             .wrapper {
                 background: #ffd800;
