--- a/EazyUpdates/home/templates/home/base.html
+++ b/EazyUpdates/home/templates/home/base.html
@@ -33,7 +33,7 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
+                  <a class="nav-link" href="{% url 'admin-panel' %}">Admin Panel</a>
                 </li>
               </ul>
             </div>
