--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/errors.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/errors.html
@@ -1,4 +1,7 @@
 {% extends 'home/base.html' %}
+{% block head %}
+<title>Error</title>
+{% endblock head %}
 {% block body %}
 <div class="jumbotron jumbotron-liquid">
     <h2 class="text text-danger text-center">
