--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/ticket.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/ticket.html
@@ -1,8 +1,15 @@
-{% extends 'home/base.html' %}
+{% extends 'home/nav2.html' %}
+
 {% block head %}
 <title>
     Raise A ticket | EazyUpdates
 </title>
+<style>
+#live_form{
+  padding-left: 600px;
+  padding-top: 150px;
+} 
+</style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 {% endblock head %}
@@ -40,7 +47,8 @@
      <label class="control-label" for="feedback_ok">
      why you want to Return?
      </label>
-     <textarea class="form-control form-control" cols="40" id="feedback_ok" name="feedback_ok" rows="10"></textarea>
+     <textarea style="width: 602px;
+     height: 119px;" class="form-control form-control" cols="40" id="feedback_ok" name="feedback_ok" rows="10"></textarea>
     </div>
     <div class="form-group hidden" id="div_testimonial">
       <div>
@@ -63,7 +71,8 @@
      <label class="control-label " for="feedback_great">
       Add description of the problem you are facing:
      </label>
-     <textarea class="form-control" cols="40" id="feedback_great" name="feedback_great" rows="10"></textarea>
+     <textarea style="width: 602px;
+     height: 119px;" class="form-control" cols="40" id="feedback_great" name="feedback_great" rows="10"></textarea>
     </div>
     <div class="form-group hidden" id="thanks_anyway">
      <label class="control-label">
