--- a/EazyUpdates/home/templates/home/base.html
+++ b/EazyUpdates/home/templates/home/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE HTML>
 <HTML>
-    <HEAD>
+    <head>
        {% block head %}
         {% endblock head %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
@@ -15,7 +15,7 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
