--- a/EazyUpdates/asset_mgmt/templates/asset_mgmt/track-ticket.html
+++ b/EazyUpdates/asset_mgmt/templates/asset_mgmt/track-ticket.html
@@ -142,7 +142,7 @@
             </div>
                 <div class="status code">Here is your ticket Id: <a href="#">{{ticket.id}}</a>
           </div>
-          {{ticket.status}}
+          <!-- {{ticket.status}} -->
         <script src="" async defer></script>
         <div id="status" style="display:none;">
             {{ticket.status}}
