--- a/EazyUpdates/home/templates/home/nav2.html
+++ b/EazyUpdates/home/templates/home/nav2.html
@@ -6,7 +6,7 @@
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      </head>
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" style="font-size: 16px;">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -16,7 +16,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a style="color:black" class="navbar-brand" href="#">EazyUpdates</a>
+            <a style="color:black; font-size: 22px;"class="navbar-brand" href="#">EazyUpdates</a>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,19 +28,8 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'assets' %}">Assets</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="{% url 'admin-panel' %}">Admin Panel</a>
                   </li>
             </ul>
           </div><!-- /.navbar-collapse -->
