--- a/EazyUpdates/home/templates/home/index.html
+++ b/EazyUpdates/home/templates/home/index.html
@@ -3,3 +3,10 @@
 {% block head %}
 <title>Home | EazyUpdates</title>
 {% endblock head %}
+
+{% block body %}
+<div class="jumbotron mt-5">
+<h1 class="text text-info text-center">EazyUpdates</h1>
+<p class="text text-info text-center">End-to-End Work Management Software.</p>
+</div>
+{% endblock body %}
